assets/css/v2/eink/subway_status.scss
.subway-status {
  position: relative;
  height: 1080px;
  width: 1136px;
  padding: 29px 32px 32px 32px;
  overflow: hidden;
  background-color: white;

  .subway-status__header {
    font-family: Helvetica, sans-serif;
    font-size: 72px;
    font-weight: 700;
    line-height: 96px;
  }

  .subway-status_row {
    position: relative;
    min-height: 230px;
    max-height: 320px;

    &--multi {
      height: 320px;
    }

    .subway-status_status_rule {
      content: "";

      position: absolute;
      bottom: 0;
      right: 10px;

      width: 1116px;
      height: 2px;

      background: #000000;
      border-radius: 1px;
    }

    &:last-child {
      .subway-status_status_rule {
        width: 1136px;
        height: 4px;
      }
    }
  }
}

.subway-status_route-pill-container {
  min-width: 144px;
  height: 64px;
  padding-top: 44px;
}

.subway-status_status {
  position: relative;
  width: 100%;
  box-sizing: border-box;
  margin-left: 36px;
  overflow: hidden;
  margin-top: 24px;

  .subway-status_alert:not(:first-child) {
    margin-top: 24px;
  }

  .subway-status_alert_route-pill-container {
    display: inline-block;

    .branch-icon {
      display: inline-block;
      height: 64px;
      width: 64px;

      &:not(:last-child) {
        margin-right: 8px;
      }
    }
  }

  .subway-status_alert_text-container {
    display: inline-block;
    vertical-align: top;
    font-family: Inter, sans-serif;
    max-width: 1024px;
    margin-left: 24px;
    font-weight: 800;
    line-height: 56px;
    font-size: 56px;

    &--normal-service {
      font-weight: 500;
      font-size: 48px;
      line-height: 43px;
    }

    .subway-status_alert_location-text {
      font-weight: 500;
      font-size: 40px;
      line-height: 40px;
      margin-left: 24px;
    }
  }
}

